# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,10 @@
 import express from 'express';
-import { userRegistration, verifyUser } from '../controller/auth.controller';
+import { loginUser, userRegistration, verifyUser } from '../controller/auth.controller';
 
 const router = express.Router();
 
 router.post('/user-registration', userRegistration);
 router.post('/verify-user', verifyUser);
+router.post('/login', loginUser);
 
 export default router;
