# apps/auth-service/src/swagger-output.json
@@ -98,6 +98,43 @@
           }
         }
       }
+    },
+    "/login": {
+      "post": {
+        "description": "Login exsisting user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Details for login",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "john@example.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "SecurePass123!"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Login successful"
+          },
+          "400": {
+            "description": "Email and password are required OR Invalid email format OR User doesn't exist! Check your email or register first."
+          },
+          "401": {
+            "description": "Invalid email or password"
+          }
+        }
+      }
     }
   }
 }
